# getbooksforcollege

./: .dockerignore  .gitignore  Dockerfile  README.md  books_analysis.txt  debug_drive.py  debug_renamer.py  docker-compose.yml  how_to_start_container.md  main.py  pyproject.toml  restart_bookgateway.sh  start.sh  start_bookgateway.sh  stop_bookgateway.sh  test_api.sh
docs/: google-drive-auth.md
mcp/: README.md  __init__.py  server.py
mcp-js/: books.js  index.js  package-lock.json  package.json  roadmap.js  tasks.js
routers/: __init__.py  books.py  content.py  excerpts.py  jobs.py  roadmap.py  tasks.py
schemas/: __init__.py  group.json  group_with_picture.json  message.json  message_with_picture.json  tasks.py  whole_book.py
scripts/: auth_google_drive.sh  create_excerpts_table.py  generate_token.py
services/: __init__.py  background_tasks.py  cache.py  db.py  db_tasks.py  drive.py  email_service.py  jobs.py  llm.py  pdf_processor.py  preprocessor.py  renamer_job.py  roadmap_sync.py  summary_service.py
tests/: test_tasks.py
